Personal blog modifications.

--- a/public/blog/layout.jade
+++ b/public/blog/layout.jade
@@ -13,6 +13,6 @@ html
     link(rel='stylesheet', href='/style.css', type='text/css')
   body
     div.wrapper
-      include common/header
+      //- include common/header
       block content
       include common/footer
