--- a/public/style/style.styl
+++ b/public/style/style.styl
@@ -44,9 +44,14 @@ a
 .post
   margin-bottom: postMarginBottom
 
+  &:first-child
+    margin-top: 40px
+
   header
     h2
       margin-bottom: 0
+    a
+      font-size: 12px
 
 .pagination
   ul
