--- a/public/style/style.styl
+++ b/public/style/style.styl
@@ -14,6 +14,10 @@ linkColor = #204A87
 body
   font-family: 'Open Sans', sans-serif
 
+h1
+  font-size: 26px
+h2
+  font-size: 20px
 p
   font-size: 14px
   line-height: 1.75em
@@ -48,7 +52,9 @@ a
     margin-top: 40px
 
   header
-    h2
+    margin-bottom: 30px
+
+    h1
       margin-bottom: 0
     a
       font-size: 12px
