--- a/public/blog/post/header.jade
+++ b/public/blog/post/header.jade
@@ -1,3 +1,3 @@
 header
-  h2= post.title
-  a(href=post.url) #{post.author}, #{post.date.getMonth()+1}/#{post.date.getDate()}/#{post.date.getFullYear()}
+  a(href=post.url)
+    h2= post.title
